fix text align on partyRequestForm make deposit button

--- a/src/components/PartyRequestForm/PartyRequestForm.scss
+++ b/src/components/PartyRequestForm/PartyRequestForm.scss
@@ -101,4 +101,9 @@ $CRF-close-bar-height: spacing(18);
     padding-top: calc(#{spacing(4)} + 0.0625rem);
     padding-bottom: calc(#{spacing(4)} - 0.0625rem);
   }
+
+  &__button {
+    padding-top: calc(#{spacing(4)} + 0.0625rem);
+    padding-bottom: calc(#{spacing(4)} - 0.0625rem);
+  }
 }
